# c4-crawler

./: .gitignore  Cargo.toml  README.md
src/: compiler.rs  crawler.rs  errors.rs  export.rs  lib.rs  main.rs  types.rs  utils.rs
src/compiler/: contract.rs  contract_resolver.rs  project.rs
src/crawler/: codearena.rs  sherlock.rs  utils.rs
src/types/: config.rs  contest.rs  contract.rs
tests/artifacts/: ERC20.json  IERC20.json  Position.json
